# xlvbatools

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/: AGENTS.md
.agents/rules/: python-rules.md  vba-rules.md
.agents/skills/xlvba-toolchain/: SKILL.md
.agents/workflows/: get-started.md  vba-debug.md  vba-edit.md
.github/workflows/: ci.yml  excel-acceptance.yml
cli/: __init__.py  init_cmd.py  main.py
docs/: agent-integration.md  api-reference.md  cli-output.md  dumper-and-modifier.md  get-started.md  headless-reliability-migration.md  headless-reliability.md  lint-and-format.md  release-validation.md  testing.md  versioning.md  watchdog-architecture.md  worker-protocol.md  workflows.md
scripts/: test.py
src/xlvbatools/: __init__.py  _compat.py  _version.py  errors.py  execution.py  logging.py  outputs.py  project.py  py.typed  results.py  snapshots.py  version.py  workflow.py
src/xlvbatools/analysis/: __init__.py  filtering.py  issue.py  preflight.py  project_context.py  rules.py
src/xlvbatools/cli/: commands.py  discovery.py  init_cmd.py  main.py  parser.py  presentation.py
src/xlvbatools/config/: __init__.py  loader.py  schema.py
src/xlvbatools/core/: __init__.py  process.py  protocol.py  session.py  watchdog.py  worker.py  worker_entry.py  workflow.py
src/xlvbatools/macro/: __init__.py  runner.py
src/xlvbatools/snapshot/: __init__.py  manager.py
src/xlvbatools/templates/agents/: AGENTS.md
src/xlvbatools/templates/agents/rules/: python-rules.md  vba-rules.md
src/xlvbatools/templates/agents/skills/xlvba-toolchain/: SKILL.md
src/xlvbatools/templates/agents/workflows/: excel-workflow.md  get-started.md  vba-debug.md  vba-edit.md
src/xlvbatools/vba/: __init__.py  _io.py  constants.py  dependency.py  differ.py  extractor.py  formatter.py  injector.py  manifest.py  search.py
src/xlvbatools/workbook/: __init__.py  debugger.py  dumper.py  inspection_worker.py  modifier.py
templates/agents/: AGENTS.md
templates/agents/rules/: python-rules.md  vba-rules.md
templates/agents/skills/xlvba-toolchain/: SKILL.md
templates/agents/workflows/: vba-debug.md  vba-edit.md
tests/: _workbook_factory.py  conftest.py  test_cli.py  test_compat.py  test_config.py  test_dependency.py  test_differ.py  test_distribution.py  test_documentation.py  test_dumper.py  test_execution.py  test_external_workbook.py  test_formatter.py  test_integration_samples.py  test_lint_filtering.py  test_logging.py  test_macro_runner.py  test_preflight.py  test_process.py  test_project.py  test_project_context.py  test_repository_hygiene.py  test_results.py  test_search.py  test_sequential_com.py  test_session.py  test_snapshot.py  test_snapshots_public.py  test_test_runner.py  test_version.py  test_watchdog.py  test_worker.py  test_workflow.py  test_workflow_live.py  test_workflow_worker.py
