[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlvbatools"
dynamic = ["version"]
description = "General-purpose Python toolkit for headless Excel VBA automation, debugging, and version control"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Felipe Mejia"},
]
readme = "README.md"
keywords = ["excel", "vba", "automation", "com", "headless"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

dependencies = [
    "pywin32; sys_platform == 'win32'",
    "Pillow",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
lint-offline = [
    "oletools; sys_platform != 'win32'",
]
dev = [
    "pytest",
    "pytest-cov",
    "setuptools>=68.0",
    "wheel",
    "oletools; sys_platform != 'win32'",
]
all = [
    "oletools; sys_platform != 'win32'",
]

[project.scripts]
xlvba = "xlvbatools.cli.main:main"

[project.urls]
Homepage = "https://github.com/felimz/xlvbatools"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xlvbatools*"]

[tool.setuptools.dynamic]
version = {attr = "xlvbatools._version.__version__"}

[tool.setuptools.package-data]
xlvbatools = ["py.typed", "templates/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short"
markers = [
    "unit: Pure Python unit tests, no COM required",
    "integration: Requires live Excel or multi-component integration",
    "com: Requires Excel COM automation (Windows only, slower)",
    "e2e: Full end-to-end pipeline tests (slowest)",
    "distribution: Builds and imports the installed wheel contract",
]
