[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlvbatools"
dynamic = ["version"]
description = "General-purpose Python toolkit for headless Excel VBA automation, debugging, and version control"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Felipe Mejia"},
]
readme = "README.md"
keywords = ["excel", "vba", "automation", "com", "headless"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

dependencies = [
    "pywin32; sys_platform == 'win32'",
    "Pillow",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
lint-offline = [
    "oletools; sys_platform != 'win32'",
]
dev = [
    "build>=1.2",
    "mypy>=1.15",
    "pytest",
    "pytest-cov",
    "ruff>=0.11",
    "setuptools>=77.0",
    "wheel",
    "oletools; sys_platform != 'win32'",
]
quality = [
    "mypy>=1.15",
    "ruff>=0.11",
]
all = [
    "oletools; sys_platform != 'win32'",
]

[project.scripts]
xlvba = "xlvbatools.cli.main:main"

[project.urls]
Homepage = "https://github.com/felimz/xlvbatools"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xlvbatools*"]

[tool.setuptools.dynamic]
version = {attr = "xlvbatools._version.__version__"}

[tool.setuptools.package-data]
xlvbatools = ["py.typed", "templates/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short -m 'not excel and not stress and not distribution and not external'"
strict_markers = true
strict_config = true
xfail_strict = true
markers = [
    "unit: isolated in-process test with no Excel or external consumer dependency",
    "integration: offline multi-component or subprocess integration test",
    "excel: live Excel test using only disposable xlvbatools-owned workbooks and processes",
    "distribution: build-isolated wheel test in a fresh consumer environment",
    "external: opt-in downstream workbook acceptance requiring --external-workbook",
    "stress: repeated long-running lifecycle coverage within the Excel tier",
    "smoke: short high-value subset of the Excel tier",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
